--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/canvasjs": "^1.9.7",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.17",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
     "@types/papaparse": "^5.3.5",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-dom": "^18.0.10",
     "@types/recharts": "^1.8.24",
     "canvasjs": "^1.8.3",
     "papaparse": "^5.3.2",
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.2.0",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
   }
 }
